añadir function cifrar

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,17 @@
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body id="principal">
     <div id="root">
-      <h1>Hello world!</h1>
-    </div>
-    <script src="index.js" type="module"></script>
-  </body>
+    <h1>Cifrado César</h1>
+    <p>Bienvenido introduce la letra que quieres cifrar</p>
+     <input type="number" id="offset" placeholder="offset" min="0">
+     <input type="text" id="texto" placeholder="Introcude una letra" maxlength="10"> <br><br>
+     <button id="buttonCifrar" type="button">CIFRAR</button> <br><br>
+     <input type="text" id="cifrar" placeholder="letra cifrada"> <!--Aún no se muestra en la caja-->
+     </div>
+      <br><span id = "cifrado"> </span>
+      <script src="index.js" type="module"></script>
+  </body>      
+ 
 </html>
